# vibz

./: .gitignore  .replit  README.md  pyproject.toml  pyproject.toml.disabled  replit.md
attached_assets/: Pasted-2026-02-12-11-13-26-49-76c732c0-User-await-app-scope-re_1770913289197.txt  Pasted-2026-02-12-14-57-29-22-f322259f-User-no-repeat-ngram-si_1770926324890.txt  Pasted-Build-a-single-page-web-app-one-page-only-with-a-chill-_1770836401776.txt  Pasted-You-must-fix-deployment-systematically-and-stop-after-e_1770909701220.txt
backend/: app.py  musicgen_engine.py  openai_audio.py  openai_vision.py  prompt_composer.py  requirements.txt
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.jsx  index.css
