[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Vibz MusicGen API"
requires-python = ">=3.11,<3.12"
dependencies = [
    "fastapi>=0.115,<1",
    "numpy>=1.26,<3",
    "openai>=1.40.0",
    "python-dotenv>=1.0.1",
    "python-multipart>=0.0.9",
    "scipy>=1.11,<2",
    "torch",
    "transformers",
    "uvicorn[standard]>=0.32,<1",
]

[[tool.uv.index]]
explicit = true
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"

[tool.uv.sources]
torch = [{ index = "pytorch-cpu", marker = "platform_system == 'Linux'" }]
